# aoc23

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: day01.py  day02.py  day03.py  day04.py
